# ros2_spot_manipulation

./: README.md
spot_manipulation_interface/: CMakeLists.txt  package.xml
spot_manipulation_interface/action/: Grasp.action  PickAndPlace.action  grasp.action
spot_manipulation_interface/launch/: grasp_action_server.launch.py  isaac_ros_apriltag_launch.py  picknplace_action_server.launch.py  spot_manipulation_action_server.launch.py
spot_manipulation_interface/spot_manipulation_interface/: grasp_logic.py  spot_grasp_action_server.py
spot_manipulation_interface/src/: camera_utils.py  grasp_logic.py  manipulation_tasks.py  pick_logic.py  place_logic.py  spot_client.py  spot_grasp_action_server.py  spot_manipulation_action_server.py  spot_picknplace_action_server.py  task_factory.py  walk_logic.py
